--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,40 +1,60 @@
-body {
-    background-color: #0C151D;
+/* style.css */
+.swiper-container {
+    width: 100%;
+    height: auto;
+    position: relative;
+    overflow: hidden;
 }
 
-@keyframes blinker {
-    50% { opacity: 0; }
+.swiper-wrapper {
+    display: flex;
+    width: 100%;
+    height: 100%;
 }
 
-.blink {
-    animation: blinker 1.5s linear infinite;
+.swiper-slide {
+    width: 100%;
+    height: 100%;
+    flex-shrink: 0;
 }
 
-.animate__animated {
-    opacity: 0;
+.swiper-slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
-/* La animación fadeIn muestra los elementos */
-.animate__animated.animate__fadeIn {
+@media (max-width: 640px) {
+    .swiper-container {
+        height: 300px;
+    }
+}
+
+@media (min-width: 641px) and (max-width: 1024px) {
+    .swiper-container {
+        height: 400px;
+    }
+}
+
+@media (min-width: 1025px) {
+    .swiper-container {
+        height: 500px;
+    }
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+    color: #fff;
+    background: rgba(0,0,0,0.5);
+    padding: 30px;
+    border-radius: 50%;
+}
+
+.swiper-pagination-bullet {
+    background: #fff;
+    opacity: 0.5;
+}
+
+.swiper-pagination-bullet-active {
     opacity: 1;
-}
-
-/* La animación swing también debe hacer visibles los elementos */
-.animate__animated.animate__bounce {
-    opacity: 1;
-}
-
-/* Ocultar elementos por defecto hasta que sean visibles */
-.animate-on-scroll {
-    opacity: 0;
-    transform: translateY(20px);
-    visibility: hidden;
-    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
-}
-
-/* Mostrar elementos cuando sean visibles */
-.animate-on-scroll.visible {
-    opacity: 1;
-    transform: none;
-    visibility: visible;
 }
