--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,21 +1,21 @@
-/* style.css */
+/* Estilos base para desktop y tablet */
 .swiper-container {
     width: 100%;
-    height: 500px;
+    height: 500px; /* Altura predeterminada */
     position: relative;
     overflow: hidden;
-    margin: 20px 0;
+    margin: 0 auto; /* Centrar el contenedor */
+    padding: 0; /* Eliminar padding no deseado */
 }
- 
+
 .swiper-wrapper {
     display: flex;
     width: 100%;
     height: 100%;
-    transition: transform 0.3s ease;
 }
 
 .swiper-slide {
-    width: 100%;
+    width: 100%; /* Ancho del 100% para desktop y tablet */
     height: 100%;
     flex-shrink: 0;
     position: relative;
@@ -25,28 +25,6 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    transition: transform 0.3s ease;
-}
-
-.mobile-indicator {
-    opacity: 1;
-    transition: opacity 0.3s ease;
-}
-
-@media (max-width: 640px) {
-    .mobile-indicator {
-        opacity: 1;
-    }
-    
-    .swiper-container {
-        height: 300px;
-    }
-}
-
-@media (min-width: 641px) and (max-width: 1024px) {
-    .swiper-container {
-        height: 400px;
-    }
 }
 
 .swiper-button-next,
@@ -71,7 +49,37 @@
     opacity: 1;
 }
 
+.mobile-indicator {
+    opacity: 1;
+    transition: opacity 0.3s ease;
+}
 
+/* Estilos específicos para móviles */
+@media (max-width: 640px) {
+    .swiper-container {
+        height: 300px; /* Altura para móviles */
+    }
 
+    .swiper-slide {
+        width: 100% !important; /* Ancho del 100% con !important para móviles */
+    }
 
+    .swiper-button-next,
+    .swiper-button-prev {
+        display: none; /* Ocultar botones de navegación en móviles */
+    }
+}
 
+/* Configuración para tablet */
+@media (min-width: 641px) and (max-width: 1024px) {
+    .swiper-container {
+        height: 400px; /* Altura para tablet */
+    }
+}
+
+/* Configuración para laptop */
+@media (min-width: 1025px) {
+    .swiper-container {
+        height: 500px; /* Altura para laptop */
+    }
+}
